# EmojiPicker

./: CMakeLists.txt  CMakeLists.txt.user.bca434d  Main.qml  Main.qml.autosave  android_resources.qrc  emojiList.js  emojipicker.cpp  emojipicker.h  emojipicker.qml  main.cpp
android/: AndroidManifest.xml  gradle.properties
android/res/values/: libs.xml
android/src/com/example/emojipicker/: MainActivity.rtf
